--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			margin: 0 auto;
+			padding-top: 6px;
 		}
 		
 
@@ -29,15 +31,55 @@
 			flex-direction: column;
 			align-items:center;
 			width: auto;
+			padding: 20px;
 			max-width: 584px;
+			border-width: 2px;
 			border-radius: 24px;
 		}
 
-		.buttons-container {
-			display: flex;
-			flex-direction: row;
-			align-items:center;	
+		.search-form {
+			padding: 5px 8px 0 16px;
 		}
+
+		.buttons-container {
+			padding-top: 18px;
+			height: 70px;
+		}
+
+		.search-button {
+			background-color: #f8f9fa;
+			border: 1px solid #f8f9fa;
+			border-radius: 4px;
+			color: #3c4043;
+			font-family: arial, sans-serif;
+			font-size: 14px;
+			margin: 11px 4px;
+			padding: 0 16px;
+			line-height: 27px;
+			height: 36px;
+			min-width: 54px;
+			text-align: center;
+			cursor: pointer;
+			user-select: none;	
+		}
+
+		.feeling-lucky-button {
+			background-color: #f8f9fa;
+			border: 1px solid #f8f9fa;
+			border-radius: 4px;
+			color: #3c4043;
+			font-family: arial, sans-serif;
+			font-size: 14px;
+			margin: 11px 4px;
+			padding: 0 16px;
+			line-height: 27px;
+			height: 36px;
+			min-width: 54px;
+			text-align: center;
+			cursor: pointer;
+			user-select: none;	
+		}
+		
 		
 		</style>
 </head>
@@ -51,7 +93,6 @@
 </div>
 
 
-
 <!-- All search elements go here (search box and buttons)-->
 <div class="search-container">
 
@@ -60,11 +101,10 @@
 
 		<!--Container for search box-->
 		<div class="search-box">
-			<form class="search-form">
+			<form action="" class="search-form">
 
-				<input>
-			
-				</input>
+				<input type="text">
+							
 
 			</form>
 	
@@ -72,22 +112,15 @@
 
 		<!--Container for search buttons-->
 		<div class="buttons-container">
-			<button class="search-button">
-				<p>Google Search</p>
-			</button>
-	
-			<button class="feeling-lucky-button">
-				<p>I'm Feeling Lucky</p>
-			</button>
 
+			<input class="search-button" value="Google Search" name="google-search" type="submit">
+
+			<input class="feeling-lucky-button" value="I'm Feeling Lucky" name="feeling-lucky" type="submit">
+
+			
 		</div>
 
-
 	</div>
-
-	
-
-
 
 </div>
 
