--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			display: flex;
 			flex-direction: column;
 			height: 100%;
+			min-width: 284px;
 		}
 
 
@@ -32,24 +33,48 @@
 			align-items: center;
 			margin: 0 auto;
 			padding-top: 6px;
+			width: auto;
+			max-width: 	584px;
+
 		}
 		
 
-		.search-box {
+		.search-elements-center {
+			max-width: 584px;
+			width: 100%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 		}
 
+		.search-box {
+			display: flex;
+			align-items: center;
+			width: 584px;
+			border: 1px solid #dfe1e5;
+			border-radius: 24px;
+		}
+
+		.search-form {
+			max-width: 584px;
+			width: 100%;
+			padding: 5px 8px 0 16px;
+			display: flex;
+			flex: 1;
+			
+		}
+
+
 		.search-form [type="text"] {
 			display: flex;
-			border: 1px solid #dfe1e5;
+			border: none;
 			box-shadow: none;
 			border-radius: 24px;
 			height: 44px;
 			margin: 0 auto;
 			width: auto;
 			max-width: 584px;
+			width: 100%;
 			
 		}
 
@@ -57,6 +82,12 @@
   			outline: none;
   			box-shadow: none;
 
+
+		}
+
+		.text-area {
+			display: flex;
+			flex: 100%;
 
 		}
 
@@ -116,7 +147,7 @@
 
 
 	<!-- All search elements go here (search box and buttons)-->
-	<form action="https://google.com" class="search-container">
+	<form action="#" class="search-container">
 
 		<!-- This div will center all search elements-->
 		<div class="search-elements-center">
@@ -125,7 +156,7 @@
 			<div class="search-box">
 				<div class="search-form">
 
-					<input type="text" name="abc">
+					<input class="text-area" type="text" name="abc">
 								
 
 				</div>
